--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,6 +57,7 @@ body {
   font-weight: 400;
   outline: none;
   border: 1px solid rgb(227, 221, 221);
+  border-radius: 10px;
   padding: 10px;
   width: 300px;
   color: gray;
